k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tech-challenge-namespace
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: tech-challenge-pos-fiap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 80
      targetPort: http
